--- a/web/media/reports/EstadoUsuarios.jrxml
+++ b/web/media/reports/EstadoUsuarios.jrxml
@@ -1,42 +1,100 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Estado Usuarios" pageWidth="555" pageHeight="7200" columnWidth="555" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" uuid="1fa506a4-8a47-45db-bb46-ed324cea272a">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Estado Usuarios" pageWidth="612" pageHeight="792" columnWidth="612" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" uuid="1fa506a4-8a47-45db-bb46-ed324cea272a">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
 	<queryString>
-		<![CDATA[SELECT IDENTIFICACION,PAPELLIDO ||' '||SAPELLIDO ||' '||PNOMBRE ||' '||SNOMBRE AS NOMBRES, DECODE(CU.ACTIVO,1,'ACTIVO','INACTIVO') AS ESTADO FROM MPERSONAS INNER JOIN CUSUARIOS CU ON IDPERSONA = CU.IDUSUARIO WHERE CODPERFIL = 4 ORDER BY ACTIVO DESC, TRIM(PAPELLIDO)]]>
+		<![CDATA[SELECT   mp.idpersona, identificacion,
+            papellido
+         || ' '
+         || sapellido
+         || ' '
+         || pnombre
+         || ' '
+         || snombre AS nombreS,
+         DECODE (cu.activo, 1, 'ACTIVO', 'INACTIVO') AS estado,
+         COUNT (DISTINCT (TRUNC (fechainicio))) trabajados,
+         NVL (TO_CHAR (fechaingreso, 'DD/MM/YYYY'), '') ingreso,
+         NVL (TO_CHAR (fecharetiro, 'DD/MM/YYYY'), '') retiro
+    FROM mpersonas mp INNER JOIN cusuarios cu
+         ON cu.idusuario = mp.idpersona AND cu.codperfil = 4
+         LEFT OUTER JOIN mregistros mr
+         ON mr.idusuario = mp.idpersona
+       AND mr.anulado = 0
+       AND TO_CHAR (fechainicio, 'mm/yyyy') = '10/2013'
+GROUP BY mp.idpersona,
+         identificacion,
+         papellido,
+         sapellido,
+         pnombre,
+         snombre,
+         activo,
+         fechaingreso,
+         fecharetiro
+ORDER BY activo DESC, TRIM (papellido)]]>
 	</queryString>
+	<field name="IDPERSONA" class="java.math.BigDecimal"/>
 	<field name="IDENTIFICACION" class="java.lang.String"/>
 	<field name="NOMBRES" class="java.lang.String"/>
 	<field name="ESTADO" class="java.lang.String"/>
+	<field name="TRABAJADOS" class="java.math.BigDecimal"/>
+	<field name="INGRESO" class="java.lang.String"/>
+	<field name="RETIRO" class="java.lang.String"/>
 	<title>
 		<band height="60" splitType="Stretch">
 			<staticText>
 				<reportElement uuid="74a71b24-cb61-4e63-974d-23405aeb9520" x="0" y="40" width="100" height="20"/>
-				<textElement textAlignment="Right" verticalAlignment="Middle"/>
+				<textElement textAlignment="Right" verticalAlignment="Middle">
+					<font isBold="true"/>
+				</textElement>
 				<text><![CDATA[IDENTIFICACION]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="82c1b319-5789-46c0-be88-b53eee38bd83" x="455" y="40" width="100" height="20"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle"/>
+				<reportElement uuid="82c1b319-5789-46c0-be88-b53eee38bd83" x="352" y="40" width="60" height="20"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font isBold="true"/>
+				</textElement>
 				<text><![CDATA[ESTADO]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="fcd3f1be-7ed7-4a03-9b70-1a96c580bca7" x="114" y="40" width="341" height="20"/>
-				<textElement verticalAlignment="Middle"/>
+				<reportElement uuid="fcd3f1be-7ed7-4a03-9b70-1a96c580bca7" x="100" y="40" width="252" height="20"/>
+				<textElement verticalAlignment="Middle">
+					<font isBold="true"/>
+				</textElement>
 				<text><![CDATA[NOMBRES]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="da7a2019-464c-402b-bff2-d87949e1e1ac" x="0" y="0" width="555" height="20"/>
+				<reportElement uuid="da7a2019-464c-402b-bff2-d87949e1e1ac" x="0" y="0" width="612" height="20"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="12"/>
 				</textElement>
 				<text><![CDATA[SOLUCIONES INTEGRALES DE OFICINA]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="7697e478-f3a6-42c9-b38f-4c7f870ddf9f" x="0" y="20" width="555" height="20"/>
+				<reportElement uuid="7697e478-f3a6-42c9-b38f-4c7f870ddf9f" x="0" y="20" width="612" height="20"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<text><![CDATA[Reporte de Estado de Usuarios]]></text>
+			</staticText>
+			<staticText>
+				<reportElement uuid="a71a021f-1fd3-462e-9619-4fa6991647d5" x="412" y="40" width="80" height="20"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font size="10" isBold="true"/>
+				</textElement>
+				<text><![CDATA[TRABAJADOS]]></text>
+			</staticText>
+			<staticText>
+				<reportElement uuid="2feb6252-7000-4847-aa5e-82fefc9a20e7" x="492" y="40" width="60" height="20"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font isBold="true"/>
+				</textElement>
+				<text><![CDATA[INGRESO]]></text>
+			</staticText>
+			<staticText>
+				<reportElement uuid="d19db9ac-bee2-434c-9614-e974e8255ea2" x="552" y="40" width="60" height="20"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font isBold="true"/>
+				</textElement>
+				<text><![CDATA[RETIRO]]></text>
 			</staticText>
 		</band>
 	</title>
@@ -50,18 +108,33 @@
 				<textFieldExpression><![CDATA[$F{IDENTIFICACION}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="6e3e79b0-27a2-43dd-a67d-8f77447471b6" x="114" y="0" width="341" height="15"/>
+				<reportElement uuid="6e3e79b0-27a2-43dd-a67d-8f77447471b6" x="100" y="0" width="252" height="15"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="SansSerif" size="10"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{NOMBRES}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="fee66b26-48aa-43aa-ab6c-9e311ba0cafd" x="455" y="0" width="100" height="15"/>
+				<reportElement uuid="fee66b26-48aa-43aa-ab6c-9e311ba0cafd" x="352" y="0" width="60" height="15"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="SansSerif" size="10"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{ESTADO}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement uuid="178370e2-c8ae-469e-947b-f1cdf78d41c6" x="412" y="0" width="80" height="15"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle"/>
+				<textFieldExpression><![CDATA[$F{TRABAJADOS}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement uuid="de891941-faa7-4b22-bc92-f499183d8118" x="492" y="0" width="60" height="15"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle"/>
+				<textFieldExpression><![CDATA[$F{INGRESO}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement uuid="f4b96de1-5ad1-4a60-9b5b-6c42d0722a55" x="552" y="0" width="60" height="15"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle"/>
+				<textFieldExpression><![CDATA[$F{RETIRO}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
