--- a/web/media/css/Plantilla.css
+++ b/web/media/css/Plantilla.css
@@ -27,8 +27,19 @@ ul{list-style-type:none;}
 
 #container{position: absolute;bottom: 0;top: 0;width: 100%}
 /*----TOP PANEL----*/
-#top{width:100%; background:url(../../media/images/bg_menu.png) 0 0 repeat-x #fff; color:#fff; padding:0px;}
-#top img.logo{width:25%;}
+
+/*#top{width:100%; background:url(../../media/images/bg_menu.png) 0 0 repeat-x #fff; color:#fff; padding:0px;}
+#top img.logo{width:25%;}*/
+#top{
+    height:125px; 
+    background:url("../../media/images/bg_menu.png") 0 0 repeat-x #fff; 
+    color:#fff; 
+    padding:0px;
+}
+#top img{
+    height:100%;
+}
+
 #top img.book{width:158px; height:99px; position:absolute; top:20px; right:46px;}
 
 #top p{font-size:12px; padding:7px 0 0 43px;}
@@ -77,6 +88,7 @@ ul{list-style-type:none;}
 /*----/BODY PANEL----*/
 /*----FOOTER PANEL----*/
 /*#footermain{height:85px; background:url(../../media/images/footerbg.gif) 0 0 repeat-x #fff; color:#010101; clear:both; padding:15px 0 0;position: absolute;bottom: -30px;width: 100%}*/
+/*
 #footermain{height:85px; background:#F3F3F3; color:#010101; clear:both; padding:15px 0 0;width: 100%}
 
 #footer {width:100%; position:relative; margin: auto; font-family:"Trebuchet MS",Arial, Helvetica, sans-serif}
@@ -93,7 +105,26 @@ ul{list-style-type:none;}
 #footer ul.templateworld li{height:20px;}
 #footer ul.templateworld li a{background:#F3F3F3; display:block; color:#444; text-decoration:none;}
 #footer ul.templateworld li a:hover{text-decoration:underline;}
-
+*/
+#footermain{
+    width: 100%;
+    height:6em;
+    font-family: sans-serif;
+    font-size: 12px;
+    color: #798e94;
+    background: #f3f3f3;
+    text-align: center;
+}
+footer, #footermain #footer{
+    font-family: sans-serif;
+    font-size: 12px;
+    color: #798e94;
+    background: #f3f3f3;
+    text-align: center;
+    height: 4em;
+    margin: auto;
+    padding: 1em;
+}
 #footerhtml{width:60px; height:13px; display:block; position:absolute; top:26px; left:260px;}
 #footerhtml a{width:48px; height:11px; display:block; background:url(../../media/images/blue-arrow.gif) 85% 60% no-repeat #fff; color:#4F4F4F; border:1px solid #DEDEDE; line-height:11px; font-size:11px; font-weight:bold; text-decoration:none; padding:1px 0 0 10px;}
 #footerhtml a:hover{background:url(../../media/images/gray-arrow.gif) 85% 60% no-repeat #fff; color:#4F4F4F;}
