--- a/web/media/css/Plantilla.css
+++ b/web/media/css/Plantilla.css
@@ -1,5 +1,13 @@
 /* CSS Document */
-body{padding:0px; margin:0px; background:url(../../media/images/bg_menu.png) 0 0 repeat-x #fff; color:#5E5E5E; font:13px/18px Arial, Helvetica, sans-serif;}
+html,body{
+    min-height: 100%;
+    height: 100%;
+}
+body{
+    margin:0px; 
+    color:#5E5E5E; 
+    font:13px/18px sans-serif,Arial, Helvetica, sans-serif !important;
+}
 div, p, ul, h2, h3, img{padding:0px; margin:0px;}
 ul{list-style-type:none;}
 
@@ -31,25 +39,29 @@ ul{list-style-type:none;}
 /*#top{width:100%; background:url(../../media/images/bg_menu.png) 0 0 repeat-x #fff; color:#fff; padding:0px;}
 #top img.logo{width:25%;}*/
 #top{
-    height:125px; 
-    background:url("../../media/images/bg_menu.png") 0 0 repeat-x #fff; 
+    height:40px; 
+    background:#154295 ; 
     color:#fff; 
     padding:0px;
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.4);
 }
 #top img{
     height:100%;
+    padding: 0 10px;
 }
 
-#top img.book{width:158px; height:99px; position:absolute; top:20px; right:46px;}
+#topContact{
+    float: right; 
+    font-size:12px; 
+    color:#fff; 
+    text-align:right;
 
-#top p{font-size:12px; padding:7px 0 0 43px;}
+    padding-right: 10px;
+}
+#topContact a:visited{color:#fff;}
+#topContact p{ padding: 0; }
 
-#topContact{width:400px; height:51px; float: right; top:43px; right:240px;font-size:12px; color:#fff; text-align:right}
-#topContact a{color:#D8D8D8;font-size:12px;}
-#topContact p{color:#FFF;font-weight:bold; }
-#topContact p.no{font-size:15px; padding:4px 0 0;}
-
-#topMenu{width:96%; height: 30px;margin: 0 3% 0 3%}
+#topMenu{width:100%; height: 30px;box-sizing: border-box;}
 
 /*----/TOP PANEL----*/
 /*----BODY PANEL----*/
@@ -58,7 +70,7 @@ ul{list-style-type:none;}
 /*----BODY LEFT PANEL----*/
 #bodyLeft{width:100%; float:left; padding:20px 36px 0 0; height: 80%}
 #bodyLeft h2{width:100%; height:30px; color:#00111A; font:28px/28px Georgia, "Times New Roman", Times, serif;}
-#bodyLeft h2 span{background:#fff; color:#046598;}
+#bodyLeft h2 span{background:#fff; color:#154295;}
 
 #bodyLeft h3{width:100% ; height:30px;  color:#00111A; font:28px/28px Georgia, "Times New Roman", Times, serif;}
 #bodyLeft h3 span{background:#fff; color:#046598;}
@@ -116,8 +128,6 @@ ul{list-style-type:none;}
     text-align: center;
 }
 footer, #footermain #footer{
-    font-family: sans-serif;
-    font-size: 12px;
     color: #798e94;
     background: #f3f3f3;
     text-align: center;
@@ -134,20 +144,20 @@ footer, #footermain #footer{
 #footercss a:hover{background:url(../../media/images/gray-arrow.gif) 35px 3px no-repeat #fff; color:#4F4F4F;}
 
 .button {
-    border-top: 1px solid #96d1f8;
+    border-top: 1px solid #154295;
     background: #65a9d7;
-    background: -webkit-gradient(linear, left top, left bottom, from(#3e779d), to(#65a9d7));
-    background: -webkit-linear-gradient(top, #3e779d, #65a9d7);
-    background: -moz-linear-gradient(top, #3e779d, #65a9d7);
-    background: -ms-linear-gradient(top, #3e779d, #65a9d7);
-    background: -o-linear-gradient(top, #3e779d, #65a9d7);
+    background: -webkit-gradient(linear, left top, left bottom, from(#154295), to(#65a9d7));
+    background: -webkit-linear-gradient(top, #154295, #65a9d7);
+    background: -moz-linear-gradient(top, #154295, #65a9d7);
+    background: -ms-linear-gradient(top, #154295, #65a9d7);
+    background: -o-linear-gradient(top, #154295, #65a9d7);
     padding: 5px 10px;
     -webkit-border-radius: 8px;
     -moz-border-radius: 8px;
     border-radius: 8px;
-    -webkit-box-shadow: rgba(0,0,0,1) 0 1px 0;
-    -moz-box-shadow: rgba(0,0,0,1) 0 1px 0;
-    box-shadow: rgba(0,0,0,1) 0 1px 0;
+    -webkit-box-shadow: #154295 0 5px 15px;
+    -moz-box-shadow: #154295 0 5px 15px;
+    box-shadow: #154295 0 5px 15px;
     text-shadow: rgba(0,0,0,.4) 0 1px 0;
     color: white;
     font-size: 10px;
